# task-manager

./: .dockeringore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
app/: api.py  settings.py  worker.py
app/db/: connection.py  enums.py  models.py  shemas.py
app/models/: task.py
app/tasks/: publisher.py  tasks.py
app/worker/: main.py
templates/: dashboard.html
tests/: test_tasks.py
